// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly (1 checked task) 1`] = `
<ul>
  <Memo(Task)
    clickHandler={[Function]}
    isChecked={true}
    key="0"
    name="Test Task 1"
    removeHandler={[Function]}
  >
    <li
      className="task"
    >
      <button
        className="checkbox"
        onClick={[Function]}
      >
        <span
          aria-label="check task"
          role="img"
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          ✔
        </span>
      </button>
      <span
        className="taskname"
      >
        Test Task 1
      </span>
      <button
        className="removeButton"
        onClick={[Function]}
      >
        x
      </button>
    </li>
  </Memo(Task)>
</ul>
`;

exports[`renders correctly (1 unchecked task) 1`] = `
<ul>
  <Memo(Task)
    clickHandler={[Function]}
    isChecked={false}
    key="0"
    name="Test Task 1"
    removeHandler={[Function]}
  >
    <li
      className="task"
    >
      <button
        className="checkbox"
        onClick={[Function]}
      >
        <span
          aria-label="check task"
          role="img"
          style={
            Object {
              "opacity": 0.1,
            }
          }
        >
          ✔
        </span>
      </button>
      <span
        className="taskname"
      >
        Test Task 1
      </span>
    </li>
  </Memo(Task)>
</ul>
`;

exports[`renders correctly (no tasks) 1`] = `
<ul>
  <Memo(Task)
    clickHandler={[Function]}
    isChecked={false}
    key="0"
    name="Test Task 1"
    removeHandler={[Function]}
  >
    <li
      className="task"
    >
      <button
        className="checkbox"
        onClick={[Function]}
      >
        <span
          aria-label="check task"
          role="img"
          style={
            Object {
              "opacity": 0.1,
            }
          }
        >
          ✔
        </span>
      </button>
      <span
        className="taskname"
      >
        Test Task 1
      </span>
    </li>
  </Memo(Task)>
</ul>
`;
